--- a/v0/client/pyproject.toml
+++ b/v0/client/pyproject.toml
@@ -15,6 +15,8 @@ numpy = "^1.24.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
+serpapi = "^0.1.5"
+google-search-results = "^2.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
