--- a/v0/.env.example
+++ b/v0/.env.example
@@ -1,9 +1,15 @@
-BACKEND_URL=http://localhost:8000 
+# Backend Service
+BACKEND_HOST=0.0.0.0
+BACKEND_PORT=8000
+BACKEND_URL=http://localhost:8000
 
-# WEAVIATE
-WEAVIATE_HOST=localhost
+# Weaviate Configuration
+WEAVIATE_HOST=weaviate
 WEAVIATE_PORT=8080
 WEAVIATE_GRPC_PORT=50051
+WEAVIATE_SCHEME=http
+
+# Weaviate Runtime Settings
 QUERY_DEFAULTS_LIMIT=25
 AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED=true
 PERSISTENCE_DATA_PATH=/var/lib/weaviate
@@ -11,8 +17,14 @@ DEFAULT_VECTORIZER_MODULE=none
 ENABLE_API_BASED_MODULES=true
 CLUSTER_HOSTNAME=node1
 ENABLE_MODULES=text2vec-voyageai
-# APIs
+
+# API Keys
 OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-COHERE_API_KEY=
 VOYAGEAI_API_KEY=
+
+# Testing
+SERPAPI_API_KEY=
+
+# Production Settings
+DOCKER_REGISTRY=
+DOCKER_IMAGE_TAG=latest
