--- a/v0/.env.example
+++ b/v0/.env.example
@@ -1,7 +1,7 @@
 # Backend Service
 BACKEND_HOST=0.0.0.0
 BACKEND_PORT=8000
-BACKEND_URL=http://localhost:8000
+BACKEND_URL=http://70.179.0.242:11000 # Public store
 
 # Weaviate Configuration
 WEAVIATE_HOST=weaviate
