--- a/v0/client/pyproject.toml
+++ b/v0/client/pyproject.toml
@@ -1,12 +1,20 @@
 [tool.poetry]
 name = "action-collective"
-version = "0.0.1"
-description = "Action Collective Client Library"
-authors = ["Your Name <your.email@example.com>"]
+version = "0.0.4"
+description = "A framework for dynamic action generation and reuse with LLMs"
+authors = ["Sebastian Sosa <1sebastian1sosa1@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/CakeCrusher/ActionCollective"
+documentation = "https://github.com/CakeCrusher/ActionCollective"
+keywords = ["llm", "ai", "actions", "tools"]
+license = "MIT"
+packages = [
+    { include = "action_collective" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-openai = "^1.3.5"
+openai = "^1.57.4"
 requests = "^2.31.0"
 pydantic = "^2.5.1"
 python-dotenv = "^1.0.0"
